crates/emdb/tests/invalid/shadowing_groupby.stderr
error: [EMQL-55] variables created by let cannot shadow tables, but `foos` does

         = note: Table defined here

  --> tests/invalid/shadowing_groupby.rs:11:36
   |
11 |             |> groupby(key for let foos /* cannot shadow table here! */ in {
   |                                    ^^^^
